--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "author": "Helton Carlos de Souza",
   "license": "MIT",
   "scripts": {
-    "go": "nodemon src/index.js"
+    "start": "nodemon src/index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
